tests/error/12_struct_type_mismatch.mire
load kioto

pub struct Counter {
    count: i64
}

pub fn main: () {
    set c = Counter(count: 5)
    set c.count = "not a number"
}